--- a/src/main/java/org/jabref/gui/chatty/Chatty.fxml
+++ b/src/main/java/org/jabref/gui/chatty/Chatty.fxml
@@ -9,7 +9,7 @@
 <AnchorPane
         xmlns="http://javafx.com/javafx"
         xmlns:fx="http://javafx.com/fxml"
-        fx:controller="org.jabref.gui.chatty.ChattyView"
+        fx:controller="org.jabref.gui.chatty.ChattyController"
         prefHeight="400.0"
         prefWidth="600.0">
 
