--- a/src/main/java/org/jabref/gui/chatty/ChattyDialog.fxml
+++ b/src/main/java/org/jabref/gui/chatty/ChattyDialog.fxml
@@ -11,48 +11,36 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.TextField?>
 <DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <content>
-      <AnchorPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-              <VBox AnchorPane.bottomAnchor="-0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                  <children>
-                      <AnchorPane>
-                          <children>
-                              <HBox prefHeight="100.0" prefWidth="600.0" spacing="25.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                  <children>
-                                      <Pane prefHeight="40.0" prefWidth="442.0" />
-                                      <Button fx:id="copyToClipboard" mnemonicParsing="false" prefHeight="26.0" prefWidth="298.0" text="Copy to Clipboard" HBox.hgrow="ALWAYS">
-                                          <HBox.margin>
-                                              <Insets right="10.0" />
-                                          </HBox.margin>
-                                      </Button>
-                                  </children>
-                                  <padding>
-                                      <Insets top="15.0" />
-                                  </padding>
-                              </HBox>
-                              <ScrollPane layoutY="55.0" prefHeight="120.0" prefWidth="458.0" AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="55.0">
-                                  <content>
-                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                                  </content>
-                              </ScrollPane>
-                              <HBox layoutY="361.0" prefHeight="47.0" prefWidth="458.0" spacing="25.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                  <children>
-                                      <TextArea prefHeight="76.0" prefWidth="494.0" HBox.hgrow="ALWAYS">
-                                          <HBox.margin>
-                                              <Insets bottom="5.0" top="4.0" />
-                                          </HBox.margin>
-                                      </TextArea>
-                                  </children>
-                              </HBox>
-                          </children>
-                      </AnchorPane>
-                  </children>
-              </VBox>
-         </children>
-      </AnchorPane>
+        <AnchorPane prefHeight="400.0" prefWidth="600.0">
+            <children>
+                <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <children>
+                        <AnchorPane prefHeight="66.0" prefWidth="600.0">
+                            <children>
+                                <Button layoutX="463.0" layoutY="13.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="122.0" text="Copy to Clipboard" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="13.0" />
+                            </children>
+                        </AnchorPane>
+                        <ScrollPane prefHeight="311.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                            </content>
+                        </ScrollPane>
+                        <AnchorPane prefHeight="67.0" prefWidth="600.0">
+                            <children>
+                                <Button layoutX="540.0" layoutY="13.0" mnemonicParsing="false" text="Send" AnchorPane.bottomAnchor="13.5" AnchorPane.rightAnchor="14.5" AnchorPane.topAnchor="13.0" />
+                                <TextField layoutX="14.0" layoutY="8.0" prefHeight="37.0" prefWidth="516.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="8.0">
+                                    <padding>
+                                        <Insets right="5.0" />
+                                    </padding>
+                                </TextField>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </VBox>
+            </children>
+        </AnchorPane>
     </content>
-    <ButtonType fx:constant="CLOSE" />
-    <ButtonType fx:id="sendButton" buttonData="RIGHT" text="Send" />
 </DialogPane>
