--- a/src/main/java/org/jabref/gui/chatty/ChattyDialog.fxml
+++ b/src/main/java/org/jabref/gui/chatty/ChattyDialog.fxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonType?>
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.TextField?>
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jabref.gui.chatty.ChattyDialogView">
     <content>
         <AnchorPane prefHeight="400.0" prefWidth="600.0">
             <children>
@@ -20,7 +11,7 @@
                     <children>
                         <AnchorPane prefHeight="66.0" prefWidth="600.0">
                             <children>
-                                <Button layoutX="463.0" layoutY="13.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="122.0" text="Copy to Clipboard" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="13.0" />
+                                <Button layoutX="463.0" layoutY="13.0" mnemonicParsing="false" onAction="#copyToClipboard" prefHeight="26.0" prefWidth="122.0" text="Copy to Clipboard" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="13.0" />
                             </children>
                         </AnchorPane>
                         <ScrollPane prefHeight="311.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
@@ -30,12 +21,8 @@
                         </ScrollPane>
                         <AnchorPane prefHeight="67.0" prefWidth="600.0">
                             <children>
-                                <Button layoutX="540.0" layoutY="13.0" mnemonicParsing="false" text="Send" AnchorPane.bottomAnchor="13.5" AnchorPane.rightAnchor="14.5" AnchorPane.topAnchor="13.0" />
-                                <TextField layoutX="14.0" layoutY="8.0" prefHeight="37.0" prefWidth="516.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="8.0">
-                                    <padding>
-                                        <Insets right="5.0" />
-                                    </padding>
-                                </TextField>
+                                <Button layoutX="540.0" layoutY="13.0" mnemonicParsing="false" onAction="#send" text="Send" AnchorPane.bottomAnchor="13.5" AnchorPane.rightAnchor="14.5" AnchorPane.topAnchor="13.0" />
+                                <TextField layoutX="14.0" layoutY="8.0" prefHeight="37.0" prefWidth="479.0" AnchorPane.bottomAnchor="8.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="86.0" AnchorPane.topAnchor="8.0" />
                             </children>
                         </AnchorPane>
                     </children>
@@ -43,4 +30,5 @@
             </children>
         </AnchorPane>
     </content>
+    <ButtonType fx:constant="CANCEL" />
 </DialogPane>
