--- a/src/main/java/org/jabref/gui/chatty/ChattyDialog.fxml
+++ b/src/main/java/org/jabref/gui/chatty/ChattyDialog.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonType?>
+<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jabref.gui.chatty.ChattyDialogView">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.jabref.gui.chatty.ChattyDialogView">
     <content>
         <AnchorPane prefHeight="400.0" prefWidth="600.0">
             <children>
@@ -14,10 +19,10 @@
                                 <Button layoutX="463.0" layoutY="13.0" mnemonicParsing="false" onAction="#copyToClipboard" prefHeight="26.0" prefWidth="122.0" text="Copy to Clipboard" AnchorPane.bottomAnchor="13.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="13.0" />
                             </children>
                         </AnchorPane>
-                        <ScrollPane prefHeight="311.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
-                            <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                            </content>
+                        <ScrollPane fx:id="scrollPane" prefHeight="311.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+                     <content>
+                        <VBox fx:id="chat" prefWidth="578.0" />
+                     </content>
                         </ScrollPane>
                         <AnchorPane prefHeight="67.0" prefWidth="600.0">
                             <children>
