SummaryTab some new functionalites

--- a/src/main/java/org/jabref/gui/entryeditor/EntryEditor.fxml
+++ b/src/main/java/org/jabref/gui/entryeditor/EntryEditor.fxml
@@ -68,7 +68,7 @@
             <!--
                 new button
             -->
-            <Button styleClass="icon-button,narrow" onAction="#deleteEntry">
+            <Button styleClass="icon-button,narrow" onAction="#showAbstractSummary">
                 <graphic>
                     <JabRefIconView glyph="DELETE_ENTRY"/>
                 </graphic>
