minor graphical changes; added new icons for chatty and summarize button

--- a/src/main/java/org/jabref/gui/entryeditor/EntryEditor.fxml
+++ b/src/main/java/org/jabref/gui/entryeditor/EntryEditor.fxml
@@ -70,7 +70,7 @@
             -->
             <Button styleClass="icon-button,narrow" onAction="#showAbstractSummary">
                 <graphic>
-                    <JabRefIconView glyph="CLEANUP_ENTRIES"/>
+                    <JabRefIconView glyph="SUMMARY"/>
                 </graphic>
                 <tooltip>
                     <Tooltip text="Summarize Abstract"/>
